# javalette

./: .gitignore  BACKLOG.md  Javalette.cf  LICENSE  Makefile  README.md  javalette.cabal  stack.yaml
apps/: Main.hs
apps/compiler/: Main.hs
apps/jlc/: Main.hs
apps/parser/: Main.hs
doc/: Makefile  README.md
jlctests/: .gitignore  KompTest.hs  Makefile  README.txt  RunCommand.hs  TestAll.hs  jlctests.cabal
lib/: runtime.ll
parser/: Main.hs
src/: Makefile
src/Javalette/: .#Compiler.hs  Backend.hs  Compiler.hs  Debug.hs  Interpreter.hs  Options.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeChecking.hs
src/Javalette/Backend/: Internals.hs  LLVM.hs
src/Javalette/Backend/LLVM/: CodeGenerator.hs  Errors.hs  Language.hs  Renamer.hs  StringCollector.hs
src/Javalette/Interpreter/: Program.hs
src/Javalette/Parser/: Main.hs
src/Javalette/Syntax/: AbsJavalette.hs  AbsJavalette.hs.bak  DocJavalette.txt  DocJavalette.txt.bak  ErrM.hs  LexJavalette.hs  LexJavalette.x  ParJavalette.hs  ParJavalette.y  PrintJavalette.hs  PrintJavalette.hs.bak  SkelJavalette.hs  SkelJavalette.hs.bak
src/Javalette/Utils/: Box.hs
test/: .gitignore  Grade.hs  Makefile  TestAll.hs  jlctests.cabal
test/progs/: fact.jlt  hello.jlt  while.jlt
