name:                javalette
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fredefox/javalette#readme
license:             BSD3
license-file:        LICENSE
author:              Frederik Hanghøj Iversen
maintainer:          fhi.1990@gmail.com
copyright:           Frederik Hanghøj Iversen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Javalette.Syntax.AbsJavalette
                     , Javalette.Syntax.ErrM
                     , Javalette.Syntax.LexJavalette
                     , Javalette.Syntax.ParJavalette
                     , Javalette.Syntax.PrintJavalette
                     , Javalette.Syntax.SkelJavalette
                     , Javalette.TypeChecking
  build-depends:       array
                     , base >= 4.7 && < 5
                     , mtl >= 2.2.1
                     , containers >= 0.5.7
  default-language:    Haskell2010

executable jlc
  hs-source-dirs:      apps/compiler
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , javalette
  default-language:    Haskell2010

executable javalette-parser
  hs-source-dirs:      apps/parser
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , javalette
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , javalette
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fredefox/javalette
