name:                javalette
version:             0.4.0.0
synopsis:            A compiler for Javalette
description:         The documentation is avaiable here:
                     <http://www.cse.chalmers.se/edu/course/TDA283/project/>.
homepage:            https://github.com/fredefox/javalette#readme
license:             BSD3
license-file:        LICENSE
author:              Frederik Hanghøj Iversen
maintainer:          fhi.1990@gmail.com
copyright:           Frederik Hanghøj Iversen
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     doc/README.md
                     Makefile
                     src/Makefile
                     stack.yaml
                     Javalette.cf
                     lib/runtime.ll
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       Javalette.Syntax.AbsJavalette
                       Javalette.Syntax.ErrM
                       Javalette.Syntax.LexJavalette
                       Javalette.Syntax.ParJavalette
                       Javalette.Syntax.PrintJavalette
                       Javalette.Syntax.SkelJavalette
                       Javalette.Backend.Internals
                       Javalette.Backend.LLVM.Language
                       Javalette.Debug
  exposed-modules:     Javalette.Syntax
                       Javalette.Interpreter
                       Javalette.Interpreter.Program
                       Javalette.TypeChecking
                       Javalette.Parser
                       Javalette.Parser.Main
                       Javalette.PrettyPrint
                       Javalette.Compiler
                       Javalette.Backend
                       Javalette.Backend.LLVM
                       Javalette.Backend.LLVM.CodeGenerator
                       Javalette.Backend.LLVM.Renamer
  build-depends:       array
                     , base >= 4.7 && < 5
                     , containers >= 0.5.7
                     , filepath >= 1.4.1.1
                     , free >= 4.12.0
                     , mtl >= 2.2.1
                     , pretty >= 1.1.3.3
                     , process >= 1.4.3.0
                     , optparse-applicative >= 0.13.2.0
  default-language:    Haskell2010

executable jlc
  hs-source-dirs:      apps/jlc
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , filepath >= 1.4.1.1
                     , javalette
                     , optparse-applicative >= 0.13.2.0
  default-language:    Haskell2010

executable jlp
  hs-source-dirs:      apps/jlp
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , javalette
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fredefox/javalette
